--- a/index.html
+++ b/index.html
@@ -36,10 +36,8 @@
             <div class="search-bar">
                 <i class="fas fa-map-marker-alt"></i>
                 <input type="text" placeholder="Marseille, France">
-                <button>
-                    <p>Rechercher</p> 
-                    <i class="fas fa-search"></i>
-                </button>
+                <button class="first">Rechercher</button>
+                <button class="second"><i class="fas fa-search"></i></button>
             </div>
 
 
@@ -55,19 +53,19 @@
 
                 <span>
                     <i class="fas fa-money-bill-wave"></i>
-                    <h3>économique</h3>
+                    économique
                 </span>
                 <span>
                     <i class="fas fa-child"></i>
-                    <h3>familial</h3>
+                    familial
                 </span>
                 <span>
                     <i class="fas fa-heart"></i>
-                    <h3>romantique</h3>
+                    romantique
                 </span>
                 <span>
                     <i class="fas fa-dog"></i>
-                    <h3>animaux autorisés</h3>
+                    animaux autorisés
                 </span>
 
             </div>
